fix height on firefox

--- a/src/split/html-cms.css
+++ b/src/split/html-cms.css
@@ -83,6 +83,7 @@
       outline: 0;
       resize: none;
       width: 100%;
+      height: 100%;
       padding: var(--padding);
       overflow: auto;
       position: absolute;
